# idlib

./: CMakeLists.txt
example/: CMakeLists.txt
example/src/: main.cpp
idlib/: precompiled.h
